--- a/HydroApp/Views/Home/Index.cshtml
+++ b/HydroApp/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
         <span class="sr-only">Next</span>
     </a>
 
-    <div class="btn-submit">Поехали! (Ю.Гагарин)</div>
+    <a href="../boat/index"><div class="btn-submit">Поехали! (Ю.Гагарин)</div></a>
 </div>
 
     <!-- <div class="stepper">
